--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
@@ -17,7 +18,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "json-server": "json-server --watch public/db.json --port 5000"
-
   },
   "eslintConfig": {
     "extends": [
