--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "firebase": "^11.3.0",
     "formik": "^2.4.6",
     "formiq": "^1.0.10",
     "react": "^19.0.0",
